<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.mephisto.vpin</groupId>
    <artifactId>studio</artifactId>
    <version>5.0.4</version>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <docs.directory>${project.basedir}/documentation</docs.directory>
        <javafx.version>25.0.3</javafx.version>
        <sqlite.version>3.53.0.0</sqlite.version>
        <commons-io.version>2.22.0</commons-io.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <commons-codec.version>1.22.0</commons-codec.version>
        <httpclient5.version>5.6.1</httpclient5.version>
        <httpcore5.version>5.4.2</httpcore5.version> <!-- Added httpcore5 version -->
        <spotbugs.version>4.9.8</spotbugs.version>
        <launch4j.version>2.7.0</launch4j.version>
        <jackson.version>3.1.1</jackson.version>
        <spring.boot.version>4.0.6</spring.boot.version>
        <logback.version>1.5.32</logback.version>
        <slf4j.version>2.0.17</slf4j.version>
        <jspecify.version>1.0.0</jspecify.version>

        <!-- Plugin versions -->
        <maven-dependency-plugin.version>3.9.0</maven-dependency-plugin.version>

        <!-- Test library versions -->
        <juni-jupiter.version>6.0.3</juni-jupiter.version>
        <junit4.version>4.13.2</junit4.version>
        <assertj.version>3.27.7</assertj.version>
        <mockito.version>5.15.2</mockito.version>

        <!-- Third-party library versions -->
        <jsr305.version>3.0.2</jsr305.version>
        <ikonli.version>12.4.0</ikonli.version>
        <jsoup.version>1.18.1</jsoup.version>
        <jda.version>6.4.1</jda.version>
        <jna.version>5.16.0</jna.version>
        <jinput.version>2.0.10</jinput.version>
        <evalex.version>3.3.0</evalex.version>
        <htmlunit.version>4.9.0</htmlunit.version>
        <zip4j.version>2.11.5</zip4j.version>
        <metadata-extractor.version>2.19.0</metadata-extractor.version>
        <tika-core.version>3.2.2</tika-core.version>
        <tika-parser-audiovideo.version>3.0.0</tika-parser-audiovideo.version>
        <boofcv.version>1.3.0</boofcv.version>
        <ddogleg.version>0.24.2</ddogleg.version>
        <georegression.version>0.28.2</georegression.version>
        <vpin-studio-popper-client.version>2.0.0</vpin-studio-popper-client.version>
        <vpin-connector-assets.version>1.1.0</vpin-connector-assets.version>
        <vpin-mania-rest-client.version>2.0.0</vpin-mania-rest-client.version>
        <poi.version>5.4.0</poi.version>
        <commons-configuration2.version>2.11.0</commons-configuration2.version>
        <commons-net.version>3.11.1</commons-net.version>
        <commons-collections4.version>4.4</commons-collections4.version>
        <commons-beanutils.version>1.11.0</commons-beanutils.version>
        <commons-text.version>1.15.0</commons-text.version>
        <commons-math3.version>3.6.1</commons-math3.version>
        <xstream.version>1.4.21</xstream.version>
        <commons-csv.version>1.13.0</commons-csv.version>
        <jcodec.version>0.2.5</jcodec.version>
        <imgscalr.version>4.2</imgscalr.version>
        <sevenzipjbinding.version>16.02-2.01</sevenzipjbinding.version>
        <guava.version>33.4.0-jre</guava.version>
        <jetbrains-annotations.version>13.0</jetbrains-annotations.version>
        <jhlabs-filters.version>2.0.235</jhlabs-filters.version>
        <controlsfx.version>11.2.3</controlsfx.version>
        <commonmark.version>0.28.0</commonmark.version>
        <reactfx.version>2.0-M5</reactfx.version>
        <richtextfx.version>0.11.7</richtextfx.version>
        <janino.version>3.1.12</janino.version>
        <tilesfx.version>21.0.9</tilesfx.version>
        <toolbox.version>21.0.5</toolbox.version>
        <tess4j.version>5.18.0</tess4j.version>
    </properties>

    <scm>
        <connection>git@github.com:syd711/vpin-studio.git</connection>
        <developerConnection>git@github.com:syd711/vpin-studio.git</developerConnection>
    </scm>

    <modules>
        <!-- Keep this module order: the UI module will package everything, so keep it at the end  -->
        <module>vpin-connector-assets</module>
        <module>vpin-connector-discord</module>
        <module>vpin-connector-github</module>
        <module>vpin-connector-iscored</module>
        <module>vpin-connector-vps</module>
        <module>vpin-connector-wovp</module>
        <module>vpin-studio-commons</module>
        <module>vpin-studio-app</module>
        <module>vpin-studio-server</module>
        <module>vpin-studio-rest-client</module>
        <module>vpin-studio-ui</module>
        <module>vpin-tools</module>
        <module>vps-bot</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>tools.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons-codec.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents.client5</groupId>
                <artifactId>httpclient5</artifactId>
                <version>${httpclient5.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents.core5</groupId>
                <artifactId>httpcore5</artifactId>
                <version>${httpcore5.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jspecify</groupId>
                <artifactId>jspecify</artifactId>
                <version>${jspecify.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.5</version>
                    <configuration>
                        <argLine>
                            --add-exports javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED
                            --add-exports javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED
                        </argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>2.7.1</version>
                    <executions>
                        <execution>
                            <id>download-licenses</id>
                            <goals>
                                <goal>download-licenses</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <cleanLicensesOutputDirectory>true</cleanLicensesOutputDirectory>
                        <errorRemedy>ignore</errorRemedy>
                        <excludeTransitiveDependencies>true</excludeTransitiveDependencies>
                        <includeTransitiveDependencies>false</includeTransitiveDependencies>
                        <licensesOutputFile>${docs.directory}/third-party-licenses/licenses.xml</licensesOutputFile>
                        <licensesOutputDirectory>${docs.directory}/third-party-licenses</licensesOutputDirectory>
                        <outputDirectory>${docs.directory}</outputDirectory>
                        <sortByGroupIdAndArtifactId>true</sortByGroupIdAndArtifactId>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.openrewrite.maven</groupId>
                    <artifactId>rewrite-maven-plugin</artifactId>
                    <version>6.38.0</version>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>

    <repositories>
        <repository>
            <id>gitlab-maven</id>
            <url>https://gitlab.com/api/v4/projects/59936705/packages/maven</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>gitlab-maven</id>
            <url>https://gitlab.com/api/v4/projects/59936705/packages/maven</url>
        </repository>

        <snapshotRepository>
            <id>gitlab-maven</id>
            <url>https://gitlab.com/api/v4/projects/59936705/packages/maven</url>
        </snapshotRepository>
    </distributionManagement>

</project>
